# cv-water-meters

./: .gitignore  Dockerfile  README.md  client.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  test.py  test_digits_model.py  test_panels_model.py  train.py  train_digits_model.py  train_panels_model.py
app/: main.py
app/src/: predict.py  router.py  visualize.py
data/images/predict/labels/: id_1029_value_409_55.txt  id_27_value_140_738.txt  id_48_value_88_795.txt  id_910_value_550_348.txt  id_995_value_434_169.txt
src/: config.py  datasets.py  extract_labels.py  image.py  images.py  labels.py  predict.py  split_dataset.py  test.py  train.py  utils.py  visualize.py
src/digits/: config.py  labels.py  test.py  train.py
src/panels/: datasets.py  test.py  train.py
tests/: test_datasets.py  test_datatsets.py  test_extract_labels.py  test_images.py  test_labels.py  test_split_dataset.py  test_utils.py
