[tool.poetry]
name = "cv-water-meters"
version = "0.1.0"
description = "YOLO model training for meter reading recognition."
authors = ["Vitaliy Babchuk <babchuk.vit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.87"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
